--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   }
 }
 
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -35,4 +36,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+.custom-link {
+  color: #33ff85; /* Change this to your desired color */
 }
