--- a/src/App.css
+++ b/src/App.css
@@ -38,5 +38,5 @@
   }
 }
 .custom-link {
-  color: #33ff85; /* Change this to your desired color */
+  color: #43a047; /* Change this to your desired color */
 }
